--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_mlkit_text_recognition: ^0.13.0
   crypto: ^3.0.3
   photo_manager_image_provider: ^2.0.0
+
+  speech_to_text: ^6.6.0
   
 dev_dependencies:
   flutter_test:
