--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.13.0
   crypto: ^3.0.3
   photo_manager_image_provider: ^2.0.0
+  device_info_plus: ^10.1.0
 
   speech_to_text: ^7.3.0
   
