--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -11,19 +11,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   cupertino_icons: ^1.0.8
 
   # routing
   go_router: ^14.2.7
 
   # state
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: any
 
   # network
   dio: ^5.7.0
 
   # utils
-  intl: ^0.19.0
+  intl: any
   collection: ^1.18.0
 
   provider: ^6.1.2
@@ -42,5 +45,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/images/logo-b.png
+
