--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   device_info_plus: ^10.1.0
 
   speech_to_text: ^7.3.0
+
+  sqflite: ^2.3.0
+  path: ^1.9.0
+  shared_preferences: ^2.2.3
+  uuid: ^4.4.0
+
   
 dev_dependencies:
   flutter_test:
