--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.2.3
   uuid: ^4.4.0
 
+  flutter_slidable: ^3.0.1
+
   
 dev_dependencies:
   flutter_test:
