--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ lifebox_api/app/__pycache__/ollama_client.cpython-312.pyc
 lifebox_api/app/__pycache__/prompts.cpython-312.pyc
 lifebox_api/app/__pycache__/schemas.cpython-312.pyc
 lifebox_api/.env
+lifebox_api/app/__pycache__/auth_routes.cpython-312.pyc
