--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ lifebox_api/app/__pycache__/schemas.cpython-312.pyc
 lifebox_api/.env
 lifebox_api/app/__pycache__/auth_routes.cpython-312.pyc
 lifebox_api/app/__pycache__/auth_routes.cpython-312.pyc
+lifebox_api/app/__pycache__/auth_routes.cpython-312.pyc
