--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   in_app_purchase: ^3.2.0
   device_calendar: ^4.3.3
   timezone: ^0.9.4
+
+  url_launcher: ^6.3.0
+  share_plus: ^10.0.0
   
 dev_dependencies:
   flutter_test:
