--- a/lifebox/pubspec.yaml
+++ b/lifebox/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
 
   url_launcher: ^6.3.0
   share_plus: ^10.0.0
+
+  flutter_html: ^3.0.0-beta.2
   
 dev_dependencies:
   flutter_test:
@@ -79,6 +81,10 @@ flutter_icons:
 flutter_native_splash:
   color: "#FFFFFF"
   image: assets/icon/splash_logo.png
+
+  android_12:
+    color: "#FFFFFF"
+    image: assets/icon/splash_logo.png
 
   android: true
   ios: true
